--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,3 @@
 bin_PROGRAMS = hexcurse 
-AM_CPPFLAGS = -I$(top_srcdir)/include -Wall -Werror -Wextra
+AM_CPPFLAGS = -I$(top_srcdir)/include -Wall -Werror -Wextra -D__GETOPT_H__
 hexcurse_SOURCES = file.c llist.c screen.c hexcurse.c stack.c getopt.c acceptch.c color.c
